logs/danutils.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/danutils'...
Listing './lib/python3.5/site-packages/danutils/cuda'...
Compiling './lib/python3.5/site-packages/danutils/cuda/autoprep_example.py'...
***   File "./lib/python3.5/site-packages/danutils/cuda/autoprep_example.py", line 39
    column_tile_w = 16, column_tile_h = 48, sm)
                                           ^
SyntaxError: positional argument follows keyword argument

Listing './lib/python3.5/site-packages/danutils/do'...
Compiling './lib/python3.5/site-packages/danutils/do/test.py'...
***   File "./lib/python3.5/site-packages/danutils/do/test.py", line 1
    print "Imported test module."
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/danutils/img'...
Compiling './lib/python3.5/site-packages/danutils/img/imgtools.py'...
***   File "./lib/python3.5/site-packages/danutils/img/imgtools.py", line 28
    print "cols:",cols
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/danutils/lib'...
Listing './lib/python3.5/site-packages/danutils/misc'...
Compiling './lib/python3.5/site-packages/danutils/misc/coroutine.py'...
***   File "./lib/python3.5/site-packages/danutils/misc/coroutine.py", line 18
    print "Looking for %s" % pattern
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/danutils/misc/debugAbort.py'...
***   File "./lib/python3.5/site-packages/danutils/misc/debugAbort.py", line 16
    print _label%d
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/danutils/misc/fastcomp.py'...
***   File "./lib/python3.5/site-packages/danutils/misc/fastcomp.py", line 28
    print sq.square
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/danutils/misc/misctools.py'...
***   File "./lib/python3.5/site-packages/danutils/misc/misctools.py", line 128
    return self.memoized[(args,`kwargs`)]
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/danutils/ostools.py'...
***   File "./lib/python3.5/site-packages/danutils/ostools.py", line 51
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/danutils/pandatools'...
Listing './lib/python3.5/site-packages/danutils/sci'...
Compiling './lib/python3.5/site-packages/danutils/sci/debugprint.py'...
***   File "./lib/python3.5/site-packages/danutils/sci/debugprint.py", line 36
    print alignpair(*arrs)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/danutils/sci/mappedarrayset.py'...
***   File "./lib/python3.5/site-packages/danutils/sci/mappedarrayset.py", line 162
    print "copy {0} to {1}".format(old_file, new_file)
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/danutils/wx'...
Compiling './lib/python3.5/site-packages/danutils/wx/trackballCanvas.py'...
***   File "./lib/python3.5/site-packages/danutils/wx/trackballCanvas.py", line 12
    raise ImportError, "Required dependency wx.glcanvas not present"
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/danutils-0.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
